--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -80,7 +80,7 @@
                     {%- endif -%}
                     {% if item.properties._method == 'pickup' %}
                       <small class="cart__policies">{{ 'layout.product.pickup' | t }}: {{ item.properties.pickup_location }}</small>
-                    {% elsif cart.attributes.pickup_address != blank %}
+                    {% elsif item.properties._method == blank and cart.attributes.pickup_address != blank %}
                     <small class="cart__policies">{{ cart.attributes.pickup_address }}</small>
                     {% endif %}
                   </p>
@@ -364,6 +364,12 @@
       const hasCustomPricing = true;
     {%- endif -%}
     window.localStorage.removeItem('delivery_type');
+    window.localStorage.removeItem('delivery_method');
+    window.localStorage.removeItem('delivery_address');
+    window.localStorage.removeItem('delivery_zipcode');
+    const cartDeliveryMethod = '{{ cart.attributes.delivery_method }}';
+    const cartDeliveryAddress = '{{ cart.attributes.customer_address }}';
+    const cartZipCode = '{{ cart.attributes.zip_code }}';
     const cartItems = [{% for item in cart.items %}{
         {%- assign item_value = 0 -%}
         {%- assign product_type = item.product.type | downcase -%}
