--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -156,16 +156,34 @@
           window.localStorage.getItem('delivery_method') === null ||
           window.localStorage.getItem('delivery_method') === 'pickup'
         ) {
+          fillShippingPickupAddress();
           return;
         }
 
+        const checkoutType = document.getElementById('checkout_shipping_address_address1') ? 'shipping' : 'billing';
+        fillAddress(checkoutType);
+      };
+
+      const fillShippingPickupAddress = function () {
+        if (
+          window.localStorage.getItem('delivery_address') === null ||
+          window.localStorage.getItem('delivery_address') === '' ||
+          window.localStorage.getItem('delivery_method') === null ||
+          window.localStorage.getItem('delivery_method') !== 'pickup'
+        ) {
+          return;
+        }
+
+        fillAddress('shipping');
+      };
+
+      const fillAddress = function (checkoutType) {
         const parts = (window.localStorage.getItem('delivery_address')).split(', ');
         if (parts.length < 1) {
           return;
         }
 
         const elementIds = ['address_address1', 'address_city', 'address_province'];
-        const checkoutType = document.getElementById('checkout_shipping_address_address1') ? 'shipping' : 'billing';
         for (let i = 0; i < elementIds.length; i++) {
           if (typeof parts[i] !== 'undefined') {
             const element = document.getElementById('checkout_' + checkoutType + '_' + elementIds[i]);
