--- a/sections/product-template-no-buy.liquid
+++ b/sections/product-template-no-buy.liquid
@@ -273,6 +273,7 @@
     const hasMultipleOptions = true;
   {%- endif -%}
 </script>
+<style>.selector-wrapper {display: none;}</style>
 {% schema %}
 {
   "name": {
