--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -1,5 +1,4 @@
 <!-- /templates/product.liquid -->
-{% include 'bold-product' with product, hide_action: 'break' %}{% if bold_hidden_product %}{% break %}{%endif %}
 {%- assign use_pallet = false -%}
 {%- assign use_check = false -%}
 {%- assign uses_normal_toggle = false -%}
@@ -147,7 +146,7 @@
                 <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
               {% endif %}
               <span id="ProductPrice" class="product-single__price js-product-single-price" itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
-                {{ current_variant.price | money }}
+                <span class="money" data-product-id="{{ product.id }}">{{ current_variant.price | money }}</span>
               </span>
 
               {% if product.compare_at_price_max > product.price %}
@@ -204,9 +203,8 @@
             {%- endif -%}
 
             <div>
-              <select name="id" id="ProductSelect-{{ section.id }}" class="form__input full-width js-product-variants{% if use_check == true or uses_normal_toggle == true %} hide{% endif %}">
+              <select name="id" id="ProductSelect-{{ section.id }}" class="form__input full-width js-product-variants{% if product.has_only_default_variant %} hide{% elsif use_check == true or uses_normal_toggle == true %} hide{% endif %}">
                 {% for variant in product.variants %}
-                  {% include 'bold-variant' with variant, hide_action: 'skip' %}
                   {% if variant.available %}
                     <option {% if variant == product.selected_or_first_available_variant %} selected="selected" {% endif %}
                       {% if use_pallet == true %} data-sod-zips="{{ variant.metafields.sod.zips }}" data-price="{{ variant.price | money_with_currency }}"{% endif %}
@@ -282,7 +280,7 @@
                 {%- if uses_normal_toggle == false and use_variant_toggle == false -%}
                   <p class="product-single__pallet-msg product-single__price product-single__price--pallet-price js-current-price-unit hide"></p>
                 {%- endif -%}
-                <button type="submit" name="add" id="AddToCart"{% if use_pallet == true or use_check == true %} disabled{% endif %} class="js-product-submit {% if use_pallet == true or use_check == true %}hide {% endif %}btn product-single__cart-submit btn--full{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
+                <button type="submit" name="add"{% unless product.tags contains 'Bundle' %} id="AddToCart"{% endunless %}{% if use_pallet == true or use_check == true %} disabled{% endif %} class="js-product-submit {% if use_pallet == true or use_check == true %}hide {% endif %}btn product-single__cart-submit btn--full{% if section.settings.enable_payment_button %} shopify-payment-btn btn--secondary{% endif %}" data-cart-url="{{ routes.cart_url }}">
                   <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
                   <span id="AddToCartText2" class="js-add-to-cart-text-delivery hide">(delivered)</span>
                   <span id="AddToCartText3" class="js-add-to-cart-text-pickup hide">(pickup)</span>
@@ -378,16 +376,12 @@
     }
   </style>
 {%- endunless -%}
-{% unless product == empty %}
-  <script type="application/json" id="ProductJson-{{ section.id }}">
-    {% include 'bold-product', output: 'json' %}
-  </script>
-{% endunless %}
 {%- if use_check == true -%}
   <script>
     const isProductLimitedByZip = true;
     {% if uses_normal_toggle == true %}const usesRegularToggle = true;{% endif %}
     {% if use_variant_toggle == true %}const usesVariantToggle = true;{% endif %}
+    {% if product.tags contains 'Bundle' %}const isBundle = true;{% endif %}
   </script>
   {%- unless uses_normal_toggle -%}
     <style>.selector-wrapper {display: none;}</style>
