--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -257,6 +257,7 @@
   {%- else -%}
     <script src="{{ 'jquery.js' | asset_url }}" defer></script>
   {%- endif -%}
+  <script src="{{ 'api.jquery.js' | shopify_asset_url }}" defer></script>
   <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
   <script src="{{ 'theme.js' | asset_url }}" defer></script>
   <script src="{{ 'sidebar-cart.js' | asset_url }}" defer></script>
