hide recommendations plugin product price

--- a/assets/product.scss
+++ b/assets/product.scss
@@ -204,3 +204,7 @@ button[class*="bold-ro__custombutton-"] + .btn--full {
 .btn + .bold_clone {
   margin-left: 0;
 }
+
+.rktheme-product-price-wrap {
+  display: none;
+}
