change button text

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -268,7 +268,7 @@
                     {%- assign delivery_button_text = 'Check delivery price' -%}
                     {%- assign pickup_button_text = 'Check location' -%}
                     {%- if uses_normal_toggle == true or use_variant_toggle == true -%}
-                      {%- assign delivery_button_text = 'Check delivery location' -%}
+                      {%- assign delivery_button_text = 'Check delivery eligibility' -%}
                       {%- assign pickup_button_text = 'Check pickup location' -%}
                     {%- endif -%}
                     <div class="js-quantity-block js-delivery-quantity-block">
